fixed issue in mobile rendering color pallete. also fixed alignment.

--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,6 @@ button {
     position: relative;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
-    /* grid-auto-flow: dense; */
     gap: 20px;
     list-style: none;
     padding: 0px;
@@ -212,7 +211,7 @@ button {
 }
 
 .gallery-image:hover {
-    transform: scale(0.98);
+    box-shadow: 0px 0px 0.5rem 0px rgba(0, 0, 0, 0.5);
     transition: 0.2s;
 }
 
@@ -258,8 +257,6 @@ button {
 .canvas {
     border-radius: 10px;
     touch-action: none;
-    /* margin: 5px; */
-    /* position: absolute; */
 }
 
 .canvas-container {
@@ -268,7 +265,6 @@ button {
     padding: 0px;
     background-position: center;
     background-size: cover;
-    /* max-height: 100%; */
 }
 
 .text-editor-container {
@@ -375,6 +371,7 @@ button {
 .share-features-container a {
     background-color: #FF9826;
     border: 1px solid #ff9826;
+    font-size: 1rem;
     border-radius: 35px;
     color: white;
     padding: 1rem 2rem;
@@ -473,6 +470,7 @@ button {
 .color-text-input {
     border-radius: 15px;
     font-size: 1.2rem;
+    height: 2rem;
     margin-right: 1rem;
     border: 1px solid #DBDBDB;
     padding: 0px 0.5rem
